# grpc_cpp

grpc_client/: CMakeLists.txt
grpc_client/conan/: conanfile.py
grpc_client/config/: config.json
grpc_client/include/: Client.hpp  ClientImpl.hpp  ClientInterface.hpp  ClientService.hpp  ConfigReader.hpp  ConnectionController.hpp  Exceptions.hpp  Logger.hpp  Models.hpp  RpcHandler.hpp
grpc_client/protos/: copy_service.proto
grpc_client/src/: Client.cpp  ClientImpl.cpp  ClientInterface.cpp  ClientService.cpp  ConnectionController.cpp  RpcHandler.cpp
grpc_server/: CMakeLists.txt  README.md
grpc_server/conan/: conan.cmake
grpc_server/config/: config.json
grpc_server/include/: ConfigReader.hpp
grpc_server/protos/: copy_service.proto
grpc_server/src/: main.cpp
